<resources>
    <string name="app_name">Movies20221</string>
    <string name="movie_title">Titulo de la Pelicula</string>
    <string name="release_date_label">Release Date:</string>
    <string name="release_date_example">30-nov-2022</string>
    <string name="vote_average_example">10</string>
    <string name="vote_average_label">Vote average:</string>
    <string name="summary">"Resumen: "</string>
</resources>